Updated Solution #2 & 3 as per guidance

--- a/JsonExerciseSolution.ipynb
+++ b/JsonExerciseSolution.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "[500 rows x 50 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,26 +548,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Indonesia             19\n",
        "China                 19\n",
+       "Indonesia             19\n",
        "Vietnam               17\n",
        "India                 16\n",
        "Yemen, Republic of    13\n",
-       "Bangladesh            12\n",
        "Nepal                 12\n",
+       "Bangladesh            12\n",
        "Morocco               12\n",
-       "Mozambique            11\n",
        "Africa                11\n",
+       "Mozambique            11\n",
        "Name: countryshortname, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,32 +585,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# declare dictionaries to get project code and name , project code and it's count, project name and it's count\n",
+    "# the data has many project names absent but project codes are there and the map btw code & name can be obtained\n",
+    "dict_code_projName = dict()\n",
+    "dict_projCode_nums = dict()\n",
+    "dict_projName_nums = dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#iterate through 'mjtheme_namecode' column and fill the dictionaries\n",
+    "for value in json_df.mjtheme_namecode.values:\n",
+    "    for dic_item in value:\n",
+    "        code = ''\n",
+    "        name = ''\n",
+    "        for key, val in dic_item.items():\n",
+    "            if key == 'code' and val != '':\n",
+    "                code = val\n",
+    "                dict_projCode_nums[code] = dict_projCode_nums.get(code, 0) + 1\n",
+    "            elif key == 'name' and val != '':\n",
+    "                name = val\n",
+    "        if code != '' and name != '':\n",
+    "            dict_code_projName[code] = name\n",
+    "            \n",
+    "for key, val in dict_projCode_nums.items():\n",
+    "    dict_projName_nums[dict_code_projName[key]] = val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'code': '11', 'name': 'Environment and natural resources management'}, {'code': '11', 'name': 'Environment and natural resources management'}]                                                                                12\n",
-       "[{'code': '8', 'name': 'Human development'}, {'code': '11', 'name': ''}]                                                                                                                                                        11\n",
-       "[{'code': '8', 'name': 'Human development'}, {'code': '8', 'name': 'Human development'}]                                                                                                                                         8\n",
-       "[{'code': '4', 'name': 'Financial and private sector development'}, {'code': '4', 'name': 'Financial and private sector development'}]                                                                                           6\n",
-       "[{'code': '2', 'name': 'Public sector governance'}, {'code': '2', 'name': 'Public sector governance'}, {'code': '2', 'name': 'Public sector governance'}]                                                                        6\n",
-       "[{'code': '8', 'name': 'Human development'}, {'code': '7', 'name': 'Social dev/gender/inclusion'}]                                                                                                                               5\n",
-       "[{'code': '8', 'name': 'Human development'}, {'code': '8', 'name': 'Human development'}, {'code': '8', 'name': 'Human development'}, {'code': '8', 'name': 'Human development'}, {'code': '8', 'name': 'Human development'}]     5\n",
-       "[{'code': '11', 'name': 'Environment and natural resources management'}, {'code': '11', 'name': ''}]                                                                                                                             5\n",
-       "[{'code': '11', 'name': 'Environment and natural resources management'}, {'code': '4', 'name': ''}]                                                                                                                              5\n",
-       "[{'code': '4', 'name': 'Financial and private sector development'}, {'code': '5', 'name': 'Trade and integration'}]                                                                                                              5\n",
-       "Name: mjtheme_namecode, dtype: int64"
+       "[('Environment and natural resources management', 250),\n",
+       " ('Rural development', 216),\n",
+       " ('Human development', 210),\n",
+       " ('Public sector governance', 199),\n",
+       " ('Social protection and risk management', 168),\n",
+       " ('Financial and private sector development', 146),\n",
+       " ('Social dev/gender/inclusion', 130),\n",
+       " ('Trade and integration', 77),\n",
+       " ('Urban development', 50),\n",
+       " ('Economic management', 38)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "json_df['mjtheme_namecode'].value_counts()[:10]"
+    "#sort the dictionary with values to get most number of projects first\n",
+    "import operator\n",
+    "sorted_list_projName_nums = sorted(dict_projName_nums.items(), key=operator.itemgetter(1), reverse=True)\n",
+    "sorted_list_projName_nums[:10]"
    ]
   },
   {
@@ -622,85 +661,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True     491\n",
-       "False      9\n",
-       "Name: theme_namecode, dtype: int64"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "json_df.theme_namecode.notnull().value_counts()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "In the above output we can see that there are 9 entries with null values\n",
-    "Filling these with ffill will fill all the entries with previous row entry of that column"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "First create a new data frame by copying from existing one"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_new_df = json_df.copy()"
+    "#Create a new data frame by copying from existing\n",
+    "json_df_copy = json_df.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_new_df.theme_namecode = json_new_df.theme_namecode.ffill()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Verify whether there are any null entries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True    500\n",
-       "Name: theme_namecode, dtype: int64"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "json_new_df.theme_namecode.notnull().value_counts()"
+    "#Using dict_code_projName fill all the missing project names with codes\n",
+    "for value in json_df_copy.mjtheme_namecode.values:\n",
+    "    for dic_item in value:\n",
+    "        code = ''\n",
+    "        nameIsThere = True\n",
+    "        for key, val in dic_item.items():\n",
+    "            if key == 'code' and val != '':\n",
+    "                code = val\n",
+    "            elif key == 'name' and val == '':\n",
+    "                nameIsThere = False\n",
+    "        if code != '' and nameIsThere == False:\n",
+    "            dic_item['name'] = dict_code_projName[code]"
    ]
   },
   {
@@ -712,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1202,21 +1188,14 @@
        "[500 rows x 50 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "json_new_df"
+    "json_df_copy"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
